--- a/PORT.KF5/ipodexport/CMakeLists.txt
+++ b/PORT.KF5/ipodexport/CMakeLists.txt
@@ -27,7 +27,7 @@ target_link_libraries(kipiplugin_ipodexport
                       KF5::Kipi
                       KF5::KExiv2
                       KF5::KIOCore
-                      kipiplugins
+                      KF5kipiplugins
                      )
 
 configure_file(kipiplugin_ipodexport.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_ipodexport.desktop)
