--- a/PORT.KF5/jalbumexport/CMakeLists.txt
+++ b/PORT.KF5/jalbumexport/CMakeLists.txt
@@ -23,7 +23,7 @@ target_link_libraries(kipiplugin_jalbumexport
                       KF5::KIOCore
                       ${QT_LIBRARIES}
                       ${QT_QTXMLPATTERNS_LIBRARY}
-                      kipiplugins
+                      KF5kipiplugins
                      )
 
 configure_file(kipiplugin_jalbumexport.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_jalbumexport.desktop)
