--- a/PORT.KF5/metadataedit/CMakeLists.txt
+++ b/PORT.KF5/metadataedit/CMakeLists.txt
@@ -55,7 +55,7 @@ target_link_libraries(kipiplugin_metadataedit
                       KF5::Kipi
                       KF5::KExiv2
                       KF5::KDcraw
-                      kipiplugins
+                      KF5kipiplugins
                      )
 
 configure_file(plugin/kipiplugin_metadataedit.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/plugin/kipiplugin_metadataedit.desktop)
