--- a/PORT.KF5/facebook/CMakeLists.txt
+++ b/PORT.KF5/facebook/CMakeLists.txt
@@ -21,7 +21,7 @@ set(kipiplugin_facebook_PART_SRCS
 add_library(kipiplugin_facebook MODULE ${kipiplugin_facebook_PART_SRCS})
 
 target_link_libraries(kipiplugin_facebook
-                      kipiplugins
+                      KF5kipiplugins
                       KF5::Kipi
                       KF5::KExiv2
                       KF5::KDcraw
