--- a/PORT.KF5/picasawebexport/CMakeLists.txt
+++ b/PORT.KF5/picasawebexport/CMakeLists.txt
@@ -26,7 +26,7 @@ target_link_libraries(kipiplugin_picasawebexport
                       KF5::KExiv2
                       
                       KF5::KIOCore
-                      kipiplugins
+                      KF5kipiplugins
                      )
 
 configure_file(kipiplugin_picasawebexport.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_picasawebexport.desktop)
