--- a/PORT.KF5/vkontakte/CMakeLists.txt
+++ b/PORT.KF5/vkontakte/CMakeLists.txt
@@ -20,7 +20,7 @@ set(kipiplugin_vkontakte_PART_SRCS
 add_library(kipiplugin_vkontakte MODULE ${kipiplugin_vkontakte_PART_SRCS})
 
 target_link_libraries(kipiplugin_vkontakte
-                      kipiplugins
+                      KF5kipiplugins
                       KF5::Kipi
 #                      KF5::KDcraw
 #                      KF5::KExiv2
