--- a/kmlexport/tests/CMakeLists.txt
+++ b/kmlexport/tests/CMakeLists.txt
@@ -4,14 +4,14 @@
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
-KDE4_ADD_EXECUTABLE(test_kmlexport_gpxparsing
+add_executable(test_kmlexport_gpxparsing
                     test_kmlexport_gpxparsing.cpp
                    )
 
 target_link_libraries(test_kmlexport_gpxparsing
-                      ${KDE4_KDECORE_LIBS}
-                      ${QT_QTTEST_LIBRARY}
-                      ${QT_QTGUI_LIBRARY}
+                      KF5::KDELibs4Support
+                      Qt5::Test
+                      Qt5::Gui
                      )
 
 add_test(test_kmlexport_gpxparsing ${EXECUTABLE_OUTPUT_PATH}/test_kmlexport_gpxparsing)
