--- a/PORT.KF5/dropbox/CMakeLists.txt
+++ b/PORT.KF5/dropbox/CMakeLists.txt
@@ -33,4 +33,4 @@ configure_file(kipiplugin_dropbox.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/kipi
 
 install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_dropbox.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 install(TARGETS kipiplugin_dropbox                                     DESTINATION ${PLUGIN_INSTALL_DIR})
-install(FILES   kipiplugin_dropboxui.rc                                DESTINATION ${DATA_INSTALL_DIR}/kipi)
+install(FILES   kipiplugin_dropboxui.rc                                DESTINATION ${KXMLGUI_INSTALL_DIR}/kipi)
