--- a/PORT.KF5/acquireimages/CMakeLists.txt
+++ b/PORT.KF5/acquireimages/CMakeLists.txt
@@ -43,7 +43,7 @@ configure_file(kipiplugin_acquireimages.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR
 
 install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_acquireimages.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 install(TARGETS kipiplugin_acquireimages                                     DESTINATION ${PLUGIN_INSTALL_DIR})
-install(FILES   kipiplugin_acquireimagesui.rc                                DESTINATION ${DATA_INSTALL_DIR}/kipi)
+install(FILES   kipiplugin_acquireimagesui.rc                                DESTINATION ${KXMLGUI_INSTALL_DIR}/kipi)
 
 # =======================================================
 # Stand alone version
