--- a/PORT.KF5/dlnaexport/CMakeLists.txt
+++ b/PORT.KF5/dlnaexport/CMakeLists.txt
@@ -66,4 +66,4 @@ configure_file(kipiplugin_dlnaexport.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/k
 
 install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_dlnaexport.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 install(TARGETS kipiplugin_dlnaexport                                     DESTINATION ${PLUGIN_INSTALL_DIR})
-install(FILES   kipiplugin_dlnaexportui.rc                                DESTINATION ${DATA_INSTALL_DIR}/kipi)
+install(FILES   kipiplugin_dlnaexportui.rc                                DESTINATION ${KXMLGUI_INSTALL_DIR}/kipi)
