--- a/PORT.KF5/imageshackexport/CMakeLists.txt
+++ b/PORT.KF5/imageshackexport/CMakeLists.txt
@@ -30,4 +30,4 @@ configure_file(kipiplugin_imageshackexport.desktop.cmake ${CMAKE_CURRENT_BINARY_
 
 install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_imageshackexport.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 install(TARGETS kipiplugin_imageshackexport                                     DESTINATION ${PLUGIN_INSTALL_DIR})
-install(FILES   kipiplugin_imageshackexportui.rc                                DESTINATION ${DATA_INSTALL_DIR}/kipi)
+install(FILES   kipiplugin_imageshackexportui.rc                                DESTINATION ${KXMLGUI_INSTALL_DIR}/kipi)
