--- a/PORT.KF5/imageviewer/CMakeLists.txt
+++ b/PORT.KF5/imageviewer/CMakeLists.txt
@@ -36,4 +36,4 @@ configure_file(kipiplugin_imageviewer.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/
 
 install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_imageviewer.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 install(TARGETS kipiplugin_imageviewer                                     DESTINATION ${PLUGIN_INSTALL_DIR})
-install(FILES   kipiplugin_imageviewerui.rc                                DESTINATION ${DATA_INSTALL_DIR}/kipi)
+install(FILES   kipiplugin_imageviewerui.rc                                DESTINATION ${KXMLGUI_INSTALL_DIR}/kipi)
