--- a/PORT.KF5/imgurexport/CMakeLists.txt
+++ b/PORT.KF5/imgurexport/CMakeLists.txt
@@ -49,4 +49,4 @@ configure_file(kipiplugin_imgurexport.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/
 
 install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_imgurexport.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 install(TARGETS kipiplugin_imgurexport                                     DESTINATION ${PLUGIN_INSTALL_DIR})
-install(FILES   kipiplugin_imgurexportui.rc                                DESTINATION ${DATA_INSTALL_DIR}/kipi)
+install(FILES   kipiplugin_imgurexportui.rc                                DESTINATION ${KXMLGUI_INSTALL_DIR}/kipi)
