--- a/PORT.KF5/mediawiki/CMakeLists.txt
+++ b/PORT.KF5/mediawiki/CMakeLists.txt
@@ -35,4 +35,4 @@ configure_file(kipiplugin_wikimedia.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/ki
 
 install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_wikimedia.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 install(TARGETS kipiplugin_wikimedia                                     DESTINATION ${PLUGIN_INSTALL_DIR})
-install(FILES   kipiplugin_wikimediaui.rc                                DESTINATION ${DATA_INSTALL_DIR}/kipi)
+install(FILES   kipiplugin_wikimediaui.rc                                DESTINATION ${KXMLGUI_INSTALL_DIR}/kipi)
