--- a/PORT.KF5/picasawebexport/CMakeLists.txt
+++ b/PORT.KF5/picasawebexport/CMakeLists.txt
@@ -33,4 +33,4 @@ configure_file(kipiplugin_picasawebexport.desktop.cmake ${CMAKE_CURRENT_BINARY_D
 
 install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_picasawebexport.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 install(TARGETS kipiplugin_picasawebexport                                     DESTINATION ${PLUGIN_INSTALL_DIR})
-install(FILES   kipiplugin_picasawebexportui.rc                                DESTINATION ${DATA_INSTALL_DIR}/kipi)
+install(FILES   kipiplugin_picasawebexportui.rc                                DESTINATION ${KXMLGUI_INSTALL_DIR}/kipi)
