--- a/PORT.KF5/rajceexport/CMakeLists.txt
+++ b/PORT.KF5/rajceexport/CMakeLists.txt
@@ -35,4 +35,4 @@ configure_file(kipiplugin_rajceexport.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/
 
 install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_rajceexport.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 install(TARGETS kipiplugin_rajceexport                                     DESTINATION ${PLUGIN_INSTALL_DIR})
-install(FILES   kipiplugin_rajceexportui.rc                                DESTINATION ${DATA_INSTALL_DIR}/kipi)
+install(FILES   kipiplugin_rajceexportui.rc                                DESTINATION ${KXMLGUI_INSTALL_DIR}/kipi)
