--- a/PORT.KF5/rawconverter/CMakeLists.txt
+++ b/PORT.KF5/rawconverter/CMakeLists.txt
@@ -39,4 +39,4 @@ configure_file(plugin/kipiplugin_rawconverter.desktop.cmake ${CMAKE_CURRENT_BINA
 
 install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/plugin/kipiplugin_rawconverter.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 install(TARGETS kipiplugin_rawconverter                                            DESTINATION ${PLUGIN_INSTALL_DIR})
-install(FILES   plugin/kipiplugin_rawconverterui.rc                                DESTINATION ${DATA_INSTALL_DIR}/kipi)
+install(FILES   plugin/kipiplugin_rawconverterui.rc                                DESTINATION ${KXMLGUI_INSTALL_DIR}/kipi)
