--- a/PORT.KF5/timeadjust/CMakeLists.txt
+++ b/PORT.KF5/timeadjust/CMakeLists.txt
@@ -31,4 +31,4 @@ configure_file(kipiplugin_timeadjust.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/k
 
 install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_timeadjust.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 install(TARGETS kipiplugin_timeadjust                                     DESTINATION ${PLUGIN_INSTALL_DIR})
-install(FILES   kipiplugin_timeadjustui.rc                                DESTINATION ${DATA_INSTALL_DIR}/kipi)
+install(FILES   kipiplugin_timeadjustui.rc                                DESTINATION ${KXMLGUI_INSTALL_DIR}/kipi)
