--- a/PORT.KF5/vkontakte/CMakeLists.txt
+++ b/PORT.KF5/vkontakte/CMakeLists.txt
@@ -33,4 +33,4 @@ configure_file(kipiplugin_vkontakte.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/ki
 
 install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_vkontakte.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 install(TARGETS kipiplugin_vkontakte                                     DESTINATION ${PLUGIN_INSTALL_DIR})
-install(FILES   kipiplugin_vkontakteui.rc                                DESTINATION ${DATA_INSTALL_DIR}/kipi)
+install(FILES   kipiplugin_vkontakteui.rc                                DESTINATION ${KXMLGUI_INSTALL_DIR}/kipi)
