--- a/timeadjust/CMakeLists.txt
+++ b/timeadjust/CMakeLists.txt
@@ -16,17 +16,20 @@ set(kipiplugin_timeadjust_PART_SRCS plugin_timeadjust.cpp
                                     task.cpp
                                     myimagelist.cpp
                                     settingswidget.cpp
-   )
+)
 
 add_library(kipiplugin_timeadjust MODULE ${kipiplugin_timeadjust_PART_SRCS})
 
 target_link_libraries(kipiplugin_timeadjust
                       KF5::Parts
-                      KF5::Kipi
-                      KF5::KExiv2
-                      KF5::KDcraw
+                      KF5::KDELibs4Support
+
+                      ${KF5Kipi_LIBRARIES}
+                      ${KF5KExiv2_LIBRARIES}
+                      ${KF5KDcraw_LIBRARIES}
+
                       KF5kipiplugins
-                     )
+)
 
 configure_file(kipiplugin_timeadjust.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_timeadjust.desktop)
 
