--- a/timeadjust/CMakeLists.txt
+++ b/timeadjust/CMakeLists.txt
@@ -9,12 +9,12 @@ subdirs(icons)
 add_definitions(-DTRANSLATION_DOMAIN=\"kipiplugin_timeadjust\")
 
 
-set(kipiplugin_timeadjust_PART_SRCS plugin_timeadjust.cpp
+set(kipiplugin_timeadjust_PART_SRCS myimagelist.cpp
+                                    plugin_timeadjust.cpp
                                     timeadjustdialog.cpp
                                     clockphotodialog.cpp
                                     actionthread.cpp
                                     task.cpp
-                                    myimagelist.cpp
                                     settingswidget.cpp
 )
 
