--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -341,8 +341,8 @@ if(KF5Kipi_FOUND)
          add_subdirectory(printimages)
          add_subdirectory(kmlexport)
          add_subdirectory(sendimages)
+         add_subdirectory(timeadjust)
 #         add_subdirectory(flashexport)
-#         add_subdirectory(timeadjust)
 #         add_subdirectory(metadataedit)
 #         add_subdirectory(expoblending)
 #
